# vietnamese-ai-smart-routing

./: .gitignore  CLAUDE.md  README.md  final_report.md  kaggle_run.py  plan.md  problem-statment.txt  pyproject.toml
configs/: complexity.yaml  data_sources.yaml  label_schema.yaml  model.yaml  sim_models.yaml
configs/schemas/: v2-complexity.yaml  v2.yaml
docs/: handover.md  kaggle-guide.md  usage.md
kaggle/: kernel-metadata.json  notebook.py  run_config.json
scripts/: build_response_matrix.py  build_routing_testset.py  calibrate_thresholds.py  distill_all_students.py  eval_all_students.py  eval_all_teachers.py  eval_logs.py  eval_router.py  kaggle_loop.py  launch_replay.sh  nvidia_baseline_benchmark.py  prefetch_models.sh  process_replay_jobs.py  replay_common.sh  resolve_cuda_home.sh  resolve_hf_token.sh  run_full_distillation.sh  run_full_teacher_training.sh  run_replay.sh  setup_replay_env.sh  stop_replay.sh  train_all_teachers.py  upload_dataset.py  watch_replay.sh
src/: config.py
src/ai_smart_routing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/classifier/: distill.py  export_onnx.py  infer.py  model.py  tokenization.py  train.py
src/data/: build_dataset.py  convert_v1_to_v15.py  crawl.py  label_deepseek.py  label_teacher.py  label_v2.py  probe.py  synth_gen.py
src/router/: capability.py  leaderboard.py  match.py  policy.py
src/serving/: api.py
src/sim/: routellm_router.py  routerbench_adapter.py  vi_response_cache.py
tests/eval/: simulate.py
tests/unit/: test_config.py  test_data.py  test_process_replay_jobs.py  test_response_matrix.py  test_router.py  test_serving_sim.py
