[project]
name = "ai-smart-routing"
version = "0.1.0"
description = "Vietnamese prompt task & complexity classifier for AI Gateway smart routing"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML stack — only needed for actual training / ONNX export.
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "scikit-learn>=1.4",
    "sentencepiece>=0.2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "optimum[onnxruntime]>=1.20",
]
# Serving the routing endpoint.
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
# Data crawling / language filtering.
data = [
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "fasttext-langdetect>=1.0",
]
# LLM API labeling (DeepSeek, OpenAI-compatible endpoints).
llm = [
    "openai>=1.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# uv: CUDA-enabled torch from the PyTorch index.
# torch>=2.2 in [ml] resolves to the cu126 wheel on Linux/Windows;
# macOS gets the standard CPU wheel from PyPI as a fallback.
# On the H200 server: `uv sync --extra ml` is all that's needed.
# ---------------------------------------------------------------------------

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
